services/kube-prometheus-stack/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: gateway
      namespace: gateway-api
  hostnames:
    - "grafana.concordalabs.com"
  rules:
    - matches:
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: prometheus
# spec:
#   parentRefs:
#     - name: gateway
#       namespace: gateway-api
#   hostnames:
#     - "prometheus.concordalabs.com"
#   rules:
#     - matches:
#       backendRefs:
#         - name: kube-prometheus-stack-prometheus
#           port: 9090
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: alertmanager
# spec:
#   parentRefs:
#     - name: gateway
#       namespace: gateway-api
#   hostnames:
#     - "alertmanager.concordalabs.com"
#   rules:
#     - matches:
#       backendRefs:
#         - name: kube-prometheus-stack-alertmanager
#           port: 9093
